--- a/index.html
+++ b/index.html
@@ -3,64 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bellizia - Accesorios de Belleza</title>
+  <title>Bellizia - Catálogo</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fafafa; color: #333; }
-    header { background: #fff; padding: 20px; text-align: center; border-bottom: 1px solid #ddd; }
-    header h1 { margin: 0; font-size: 2rem; color: #7b5ba6; }
-    .container { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; padding: 20px; }
-    .card { background: #fff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); overflow: hidden; text-align: center; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+    header { background-color: #fff; padding: 20px; text-align: center; border-bottom: 1px solid #ddd; }
+    header h1 { color: #a46cc0; margin: 0; }
+    .container { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; padding: 20px; }
+    .card { background: #fff; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.05); overflow: hidden; text-align: center; }
     .card img { width: 100%; height: auto; }
-    .card h2 { font-size: 1.1rem; margin: 10px 0; }
-    .card p { margin: 5px; }
-    .btn { display: inline-block; margin: 10px 0 20px; padding: 10px 20px; border-radius: 4px; background: #7b5ba6; color: #fff; text-decoration: none; }
-    footer { text-align: center; padding: 15px; font-size: 0.9rem; color: #777; }
+    .card h2 { font-size: 1.1rem; margin: 10px 0; color: #555; }
+    .card a { display: inline-block; margin: 10px 0 20px; padding: 10px 20px; background-color: #a46cc0; color: #fff; border-radius: 5px; text-decoration: none; }
+    footer { text-align: center; padding: 15px; font-size: 0.9rem; color: #aaa; }
   </style>
 </head>
 <body>
   <header>
     <h1>Bellizia</h1>
-    <p>Accesorios de Belleza - Envío Nacional Colombia</p>
+    <p>Catálogo de Productos</p>
   </header>
   <main class="container">
-    <!-- Producto 1 -->
     <div class="card">
-      <img src="URL_IMAGEN_ESPEJO_LED" alt="Espejo LED Portátil">
-      <h2>Espejo LED Portátil</h2>
-      <p><strong>$54.800 COP</strong></p>
-      <a href="https://wa.me/573114583341?text=Hola%20quiero%20comprar%20Espejo%20LED%20Portátil" class="btn">Comprar en WhatsApp</a>
+      <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1643516/1737938851Imagen%20de%20WhatsApp%202025-01-26%20a%20las%2019.46.33_67c7ddf1.jpg" alt="Pulsera Enlazada X2">
+      <h2>Pulsera Enlazada X2</h2>
+      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20Pulsera%20Enlazada%20X2">Comprar en WhatsApp</a>
     </div>
-    <!-- Producto 2 -->
     <div class="card">
-      <img src="URL_IMAGEN_VAPORIZADOR" alt="Vaporizador Facial 2 en 1">
-      <h2>Vaporizador Facial 2 en 1</h2>
-      <p><strong>$119.900 COP</strong></p>
-      <a href="https://wa.me/573114583341?text=Hola%20quiero%20comprar%20Vaporizador%20Facial%202%20en%201" class="btn">Comprar en WhatsApp</a>
+      <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1844843/1749573149D_NQ_NP_982269-MLU79124544006_092024-O.webp" alt="Proyector Astronauta Galaxia">
+      <h2>Proyector Astronauta Galaxia</h2>
+      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20el%20Proyector%20Astronauta">Comprar en WhatsApp</a>
     </div>
-    <!-- Producto 3 -->
     <div class="card">
-      <img src="URL_IMAGEN_GUA_SHA" alt="Rodillo Gua Sha">
-      <h2>Rodillo Gua Sha</h2>
-      <p><strong>$34.800 COP</strong></p>
-      <a href="https://wa.me/573114583341?text=Hola%20quiero%20comprar%20Rodillo%20Gua%20Sha" class="btn">Comprar en WhatsApp</a>
+      <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1616875/1736281585D_NQ_NP_987579-MCO74038214486_012024-O.webp" alt="Plancha Facial Rejuvenecedora">
+      <h2>Plancha Facial Rejuvenecedora</h2>
+      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20Plancha%20Facial%20Rejuvenecedora">Comprar en WhatsApp</a>
     </div>
-    <!-- Producto 4 -->
     <div class="card">
-      <img src="URL_IMAGEN_MINI_FRIO" alt="Mini Nevera de Skincare">
-      <h2>Mini Nevera de Skincare</h2>
-      <p><strong>$185.000 COP</strong></p>
-      <a href="https://wa.me/573114583341?text=Hola%20quiero%20comprar%20Mini%20Nevera%20de%20Skincare" class="btn">Comprar en WhatsApp</a>
+      <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/700843/1710016512Captura.PNG" alt="Removedor de puntos negros">
+      <h2>Removedor de puntos negros</h2>
+      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20el%20Removedor%20de%20puntos%20negros">Comprar en WhatsApp</a>
     </div>
-    <!-- Producto 5 -->
     <div class="card">
-      <img src="URL_IMAGEN_CEPILLO" alt="Cepillo Alisador de Pelo">
-      <h2>Cepillo Alisador de Pelo</h2>
-      <p><strong>$89.900 COP</strong></p>
-      <a href="https://wa.me/573114583341?text=Hola%20quiero%20comprar%20Cepillo%20Alisador%20de%20Pelo" class="btn">Comprar en WhatsApp</a>
+      <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/896449/1716988166WhatsApp%20Image%202024-05-29%20at%2008.05.25%20(1).jpeg" alt="Producto 5">
+      <h2>Lámpara LED Decorativa</h2>
+      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20L%C3%A1mpara%20LED%20Decorativa">Comprar en WhatsApp</a>
     </div>
   </main>
   <footer>
-    &copy; 2025 Bellizia - Todos los derechos reservados.
+    &copy; 2025 Bellizia. Todos los derechos reservados.
   </footer>
 </body>
 </html>
