--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
   <main class="container">
     <div class="card">
       <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1643516/1737938851Imagen%20de%20WhatsApp%202025-01-26%20a%20las%2019.46.33_67c7ddf1.jpg" alt="Pulsera Enlazada X2">
-      <h2>Pulsera Enlazada X2</h2>
+      <h2>Kit Duo Rodillo Gua Sha Dermatologico</h2>
       <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20Pulsera%20Enlazada%20X2">Comprar en WhatsApp</a>
     </div>
     <div class="card">
       <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1844843/1749573149D_NQ_NP_982269-MLU79124544006_092024-O.webp" alt="Proyector Astronauta Galaxia">
-      <h2>Proyector Astronauta Galaxia</h2>
+      <h2>Espejo LED Mini</h2>
       <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20el%20Proyector%20Astronauta">Comprar en WhatsApp</a>
     </div>
     <div class="card">
       <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/1616875/1736281585D_NQ_NP_987579-MCO74038214486_012024-O.webp" alt="Plancha Facial Rejuvenecedora">
-      <h2>Plancha Facial Rejuvenecedora</h2>
+      <h2>Vaporizador Facial Rejuvenecedora</h2>
       <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20Plancha%20Facial%20Rejuvenecedora">Comprar en WhatsApp</a>
     </div>
     <div class="card">
       <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/700843/1710016512Captura.PNG" alt="Removedor de puntos negros">
-      <h2>Removedor de puntos negros</h2>
+      <h2>MIni Nevera Skincare</h2>
       <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20el%20Removedor%20de%20puntos%20negros">Comprar en WhatsApp</a>
     </div>
     <div class="card">
       <img src="https://d39ru7awumhhs2.cloudfront.net/colombia/products/896449/1716988166WhatsApp%20Image%202024-05-29%20at%2008.05.25%20(1).jpeg" alt="Producto 5">
-      <h2>Lámpara LED Decorativa</h2>
-      <a href="https://wa.me/573114583341?text=Hola%2C%20me%20interesa%20la%20L%C3%A1mpara%20LED%20Decorativa">Comprar en WhatsApp</a>
+      <h2>Plancha Alisadora Pequeña </h2>
+      <a href="https://d39ru7awumhhs2.cloudfront.net/colombia/products/702549/1710175675D_NQ_NP_601833-MLU74978357135_032024-O.webp">Comprar en WhatsApp</a>
     </div>
   </main>
   <footer>
